# Alpha_Virtual_Machine

./: CMakeLists.txt  Makefile  README.md
src/: avm.c  loader.c  loader.h  state.c  state.h  utilities.c  utilities.h
src/ALU/: dispatcher.c  dispatcher.h  exec_arithmetic.c  exec_arithmetic.h  exec_branches.c  exec_branches.h  exec_functions.c  exec_functions.h  exec_tables.c  exec_tables.h
src/libs/: hash_map.c  hash_map.h
src/memory/: function.h  instruction.h  memory.c  memory.h  stack.c  stack.h  table.c  table.h
src/std_lib/: library_functions.c  library_functions.h
test_files/Working/: 04_temp_vars_test.asc  05_objectmemberkeys.asc  06_objectcopy.asc  07_relop_logic.asc  13_func_calls.asc  14_tables1.asc  15_tables2.asc  18_tables_bonus.asc  20_delegation.asc  22_hercules.asc  25_Tree2.asc  26_if_else.asc  27_table_bool_indexed.asc
